Fixed RIDER-47863. Minor updates in Gradle configuration to run Rider tests through Gradle task
- Move idea tests related logic and tests into idea module to be able to successfully run them on TeamCity
- Bump versions for 211 release
- Minor updates in configuration